--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue-router": "^3.5.3",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.7",
-    "vuetify": "^2.6.6"
+    "vuetify": "^2.6.6",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
