--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.6",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "v-idle": "^0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
