--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^2.6.14",
     "axios": "^0.27.2",
+    "core-js": "^3.8.3",
+    "libphonenumber-js": "^1.10.13",
     "swiper": "^5.4.5",
+    "v-idle": "^0.2.1",
     "v-mask": "^2.3.0",
+    "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
     "vue-axios": "^3.4.1",
     "vue-router": "^3.5.3",
@@ -20,8 +22,7 @@
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.6",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0",
-    "v-idle": "^0.2.1"
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -31,10 +32,10 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.8",
+    "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
