--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-axios": "^3.4.1",
     "vue-router": "^3.5.3",
+    "vue2-editor": "^2.10.3",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.6",
