--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
     "vue-axios": "^3.4.1",
+    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^3.5.3",
     "vue2-editor": "^2.10.3",
     "vue2-google-maps": "^0.10.7",
